--- a/index2.html
+++ b/index2.html
@@ -59,11 +59,11 @@
   <div class="container" id="cloudContainer">
   <div class="row ">
   <div class="col s8 offset-s2 m6 offset-m3  l4 offset-l4 " >
-  <img id="dp" class="responsive-img" src="img/logo.png" >
+  <img id="dp" class="responsive-img" src="img/unnamed.png" >
   </div>
   </div>
   <div class="row ">
-  <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>October 6, 7 and 8</h5>
+  <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>October 14, 15 and 16</h5>
   </div>
   <div class="row ">
   <div style="text-align:center; ">
