--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
   </div>
   <div class="row ">
-  <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>October 6, 7 and 8</h5>
+  <h5 class="thin valign center-align white-text" style="white-space: nowrap; font-weight:200">National Hackathon<br>October 6, 7 and 8th</h5>
   </div>
   <div class="row ">
   <div style="text-align:center; ">
