--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 <meta name="theme-color" content="#76c4c6">
 <meta name="apple-mobile-web-app-status-bar-style" content="#76c4c6">
 
-
+<link rel="stylesheet" href="C:\Users\joel\Desktop\materialize\hack4people.github.io\test\SpinKit\css\spinners\11-folding-cube.css" >
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/tweencloud.css">
 <link rel="stylesheet" href="materialize/css/materialize.min.css">
@@ -20,11 +20,14 @@
 <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 </head>
 <body>
-<div id="startup">
-<svg class="spinner-container" width="65px" height="65px" viewBox="0 0 52 52">
-<circle class="path" cx="26px" cy="26px" r="20px" fill="none" stroke-width="4px"></circle>
-</svg>
-</div>
+  <div id="startup">
+<div class="sk-folding-cube">
+        <div class="sk-cube1 sk-cube"></div>
+        <div class="sk-cube2 sk-cube"></div>
+        <div class="sk-cube4 sk-cube"></div>
+        <div class="sk-cube3 sk-cube"></div>
+      </div>
+      </div>
 <div id="main">
 
 
