--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 
 
-<meta name="theme-color" content="#76c4c6">
-<meta name="apple-mobile-web-app-status-bar-style" content="#76c4c6">
+<meta name="theme-color" content="#435f7b">
+<meta name="apple-mobile-web-app-status-bar-style" content="#435f7b">
 
 
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/tweencloud.css">
 <link rel="stylesheet" href="materialize/css/materialize.min.css">
 <link rel="stylesheet" type="text/css" href="fullPage/jquery.fullPage.css"/>
 <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
@@ -28,11 +27,8 @@
 <div id="main">
 
 
-  <div class="navbar-fixed">
  <nav class="themecolor z-depth-0">
       <div class="nav-wrapper">
-
-
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       <ul class="right hide-on-med-and-down">
       <li ><a href="https://www.facebook.com/hack4people" target="_blank"><i class="socicon-facebook"></i></a></li>
@@ -44,18 +40,16 @@
       </ul>
     </div>
   </nav>
-</div>
 
 
 
 
-  <div class="mainsection section" id="section0" style="background-color:#76c4c6;position:relative; z-index:1;overflow-x: hidden;  overflow-y: hidden;  background-image: url('img/dododle.svg');
-    background-size: cover;
-    background-repeat: no-repeat;">
+  <div class="mainsection section" id="section0" style='background-image: url("http://static1.squarespace.com/static/541be8bee4b07b5243b17a7f/t/54719692e4b022291342b26d/1416730259212/about_us_header.jpg?format=2500w");    background-color: #373b50;    background-blend-mode: soft-light;    background-size: cover;'>
+
   <div class="container " id="cloudContainer">
-  <div class="row ">
+  <div class="row center">
   <div class="col s8 offset-s2 m6 offset-m3  l4 offset-l4 " >
-  <img id="dp" class="responsive-img" src="img/logo.png" >
+  <img id="dp" class="responsive-img" style="width:75%;height:75%;" src="img/logo2.png" >
   </div>
   </div>
   <div class="row ">
@@ -70,12 +64,12 @@
   </div>
   </div>
 
-<div class="" id="section2" style="background-color:#619fa1;position:relative; z-index:1;">
+<div class="" id="section2" style="background-color:#373b50;position:relative; z-index:1;">
 	<div class="container">
 	 	<div class="row">
 
 		 	<div class="col s12" style="margin-top:100px;margin-bottom:30spx;">
-				  <h5 class="white-text center-align ">Theme for 2016: <br>Smart technologies against corruption.</h5>
+				  <h5 class="white-text center-align ">Theme for 2016: <br>Smart technological solutions against corruption.</h5>
 			 </div>
 		</div>
 
@@ -115,22 +109,21 @@
 </div>
 <div class="section" id="section3" style="background-color:#fff;position:relative; z-index:1;">
     <div class="container">
-                  <div class="row ">
+
+            
+
+                  <div class="row center">
                       <div class="col s12 " >
-                      <h2 class="valign center-align" style="white-space: nowrap; "> Sponsors </h2><br><h5 class="valign center-align" style="white-space: nowrap; "> Want to become a sponsor? Mail us at mail@hack4people.com </h5>
+                      <h2 class="valign center-align" style="white-space: nowrap; "> Sponsors </h2><br><h5 class="valign center-align" style="white-space: nowrap; "> Want to become a sponsor? Mail us at hack4people@sahrdaya.ac.in </h5>
                       </div>
                   </div>
+<div class="row center"><h5  class="valign center-align" style="white-space: nowrap; "> Our awesome sponsors</h5><br>
+            <img src="img/GitHub_Logo.png" href="" style="height:70px; margin:30px;"/>
 
-                   <div class="row ">
-                     <h5  class="valign center-align" style="white-space: nowrap; "> Media Sponsor </h5>
-                      <div class="col s12 m4 offset-m4  l4 offset-l4" >
+            </div>
+                  
 
-                          <h5  class="valign center-align"><img src="img/toi.jpg" href="" style="height:110px;margin:30px;"/></h5>
-                      </div>
-
-                  </div>
-
-                   <div class="row ">
+                   <div class="row center">
                     <h5  class="valign center-align" style="white-space: nowrap; "> Organised by </h5><br>
                        <div class="col s12  m8 offset-m2  l8 offset-l2" >
                            <h5  class="valign center-align"><img src="img/ksm.svg" href="" style="height:180px; margin:30px;"/>
@@ -138,6 +131,17 @@
 							<img src="img/iedc.svg" href="" style="height:180px; margin:30px;"/></h5>
                           </div>
                   </div>
+
+
+             <div class="row center">
+                     <h5  class="valign center-align" style="white-space: nowrap; "> In collaboration with </h5>
+                      <div class="col s12 m4 offset-m4  l4 offset-l4" >
+
+                          <h5  class="valign center-align"><img src="img/kila.jpg" href="" style="height:210px;margin:30px;"/></h5>
+                      </div>
+
+                  </div>
+
     </div>
 
 </div>
@@ -159,9 +163,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
   <script src="materialize/js/materialize.min.js"></script>
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
 
-<script type="text/javascript" src="js/cloud.js"></script>
 
 <script type="text/javascript">
 $(".button-collapse").sideNav();
