--- a/test/index.html
+++ b/test/index.html
@@ -395,6 +395,18 @@
                 </div>
 
             </div>
+
+
+            <div class="fixed-action-btn vertical click-to-toggle" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large red">
+      <i class="material-icons">menu</i>
+    </a>
+    <ul>
+           <li><a class="btn-floating blue" href="../sponsorshipbrochure.pdf"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
+
+
             <footer class="page-footer" style="background-color:#435f7b">
                 <div class="container">
                     <div class="row">
