--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="materialize/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="fullPage/jquery.fullPage.css"/>
         <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Martel:400,400italic,900' rel='stylesheet' type='text/css'>
         <style>
             body {
