--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
 
 		<div class="row ">
                   <div class="col s12 ">
-		             <div class="card">
-		            <div class="card-content black-text" >
-		              <p class="about">You wish your country , had better governance, offered its citizens more opportunities for a better life... </p><br>
-		              <p class="about">What if YOU were given a chance to MAKE YOUR COUNTRY be all this and more! What will your BIG IDEA be? If you are a college student, here's your opportunity! Form an interdisciplinary team with engineers, IT experts &amp; designers.Wear your thinking hats.</p><br><p class="about">Apply your knowledge to solve the most challenging problems that our nation  have been facing is the invincible  tentacles of Corruption. Corruption is so severe that all are becoming a part of this engulfing mesh.</p><br><p class="about">We believe that technical solutions can prevent many people to be a part of this deadly menace. We strongly feel that robust technological solutions can fight corruption in the country, than anything else.</p><br><p class="about">Convert your passion into action.</p><br><p class="about">Participate in the  Hackathon  on  "Smart Technical Solutions Against Corruption" conducted by Innovation &amp; Entrepreneurship Development Center (IEDC) of Sahrdaya College of Engineering &amp; Technology, Thrissur,  in the wake of newly inspired "Digital India Drive", during the Vigilance awareness week at 2016, October.</p>
+		             <div class="card themecolor z-depth-0" >
+		            <div class="card-content white-text" >
+		              <p class="about"  style="text-align:justify;">One of the most challenging problems that our nation is facing are the invisible tentacles of Corruption. Corruption is so severe that all are becoming a part of this engulfing mesh. We believe that technical solutions can prevent many people from being a part of this deadly menace. We strongly feel that robust technological solutions can fight corruption in the country, than anything else. With this view and in the wake of newly inspired "Digital India Drive'; we the Innovation &amp; Entrepreneurship Development Center (IEDC) of Sahrdaya College of Engineering &amp; Technology, Thrissur, Kerala, in association with Kerala Startup Mission is organizing a Hackathon on " Smart Technological Solutions Against Corruption" during the Vigilance awareness week on October, 2016. </p>
 		            </div>
 
 		          </div>
@@ -87,24 +86,16 @@
             </div>
 
              <div class="row ">
-                  <div class="col s12 m6 l6 ">
-					          <div class="card ">
-					            <div class="card-content">
+                  <div class="col s12 ">
+					          <div class="card themecolor z-depth-0 ">
+					            <div class="card-content white-text ">
 					              <span class="card-title">Instructions</span>
-					              <p class="about">This is a 30 hour app development coding contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption . You can participate individually or in a team of 2.This is completely offline coding, that is contestants need to be present at the venue for hackthon.</p>
+					              <p class="about" style="text-align:start;">This is a 30 hour contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption. You can participate individually or in a team of 2. There will be a prelims where top 60 teams will be selected for the offline event. The selected teams will be invited to build their ideas into reality.</p>
 					            </div>
 					          </div>
 
                   </div>
-                  <div class="col s12 m6 l6 ">
-                  <div class="card ">
-					            <div class="card-content">
-					              <span class="card-title">Rules</span>
-					              <p class="about">1. Contest is open to all smart coders(age limit, nationality...)<br>2. Make sure you update your profile with accurate details(name,mailid,mob no and profile picture)<br>3. Contest allows development of web/mobile application in any language and script<br>4. the contestants can be in groups of 2 or as individual<br>5. Hack4people has the rights to this contest and their decision would be final</p>
-					            </div>
-					          </div>
-                  </div>
-
+                 
 	 </div>
 </div>
 <div class="section" id="section3" style="background-color:#fff;position:relative; z-index:1;">
@@ -148,7 +139,7 @@
 
 
 
-<div class="sectio" id="section4"style="background-color:#76c4c6;position:relative; z-index:1;padding-top: 20px">
+<div class="sectio" id="section4"style="background-color:#373b50;position:relative; z-index:1;padding-top: 20px">
     <div class="container" >
 
     </div>
