addded overscroll x hidden

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <link href="min/custom-min.css" type="text/css" rel="stylesheet">
     <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 </head>
-
+<style>
+    html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+</style>
 <body id="top" class="scrollspy">
     <!-- Pre Loader -->
     <div id="loader-wrapper">
