removed sponsor desc style

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="col s12 ">
                     <h2 class="valign center-align" style="white-space: nowrap; "> Sponsors </h2>
                     <br>
-                    <h5 class="valign center-align" style="white-space: nowrap; "> Want to become a sponsor? Mail us at hack4people@sahrdaya.ac.in </h5>
+                    <h5 class="valign center-align" style=" "> Want to become a sponsor? Mail us at hack4people@sahrdaya.ac.in </h5>
                 </div>
             </div>
             <div class="row center">
