--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="card themecolor z-depth-0 ">
                         <div class="card-content black-text ">
                             <span class="card-title black-text">Instructions</span>
-                            <p class="about light center" style="font-size:18px;text-align:start;">This is a 30 hour contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption. You can participate individually or in a team of 2. There will be a prelims where top 60 teams will be selected for the offline event. The selected teams will be invited to build their ideas into reality.</p>
+                            <p class="about light center" style="font-size:18px;text-align:start;">This is a 30 hour contest. Contestants need to brainstorm and arrive at smart solutions for fighting corruption. You can participate individually or in a team of 2. There will be a prelims where top teams will be selected for the offline event. The selected teams will be invited to build their ideas into reality.</p>
                         </div>
                     </div>
                 </div>
