--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <li><a href="#intro">Event</a></li>
                         <li hidden><a href="#mentors">Mentors</a></li>
                         <li><a href="#team">Sponsors</a></li>
-                        <li><a href="https://www.facebook.com/hack4people" target="_blank"><i class="socicon-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/Hack4People" target="_blank"><i class="socicon-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/hack4people" target="_blank">Facebook</a></li>
+                        <li><a href="https://twitter.com/Hack4People" target="_blank">Twitter</a></li>
                     </ul>
                     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
                 </div>
