--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row ">
                 <div style="text-align:center; ">
-                    <a class="waves-effect waves-greendark btn-large themecolors" href="https://h4p.hackerearth.com" target="_blank">Register for Prelims!</a>
+                    <a class="waves-effect waves-greendark btn-large themecolors" href="https://h4p.hackerearth.com" target="_blank">Reg for Prelims!</a>
                 </div>
             </div>
         </div>
