--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 </head>
 <style>
-    html, body {
+html,
+body {
     max-width: 100%;
     overflow-x: hidden;
 }
 </style>
+
 <body id="top" class="scrollspy">
     <!-- Pre Loader -->
     <div id="loader-wrapper">
@@ -218,6 +220,85 @@
             </div>
         </div>
     </div>
+    <div class="section scrollspy" id="articles">
+        <div class="container">
+            <h2 class="header text_b">Articles </h2>
+            <div class="row">
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>Nine ways to use technology to reduce corruption</h5>
+                            <br>
+                            <p>How can technology improve how governments track and tackle corruption? Our panel of experts share their thoughts</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="https://www.theguardian.com/global-development-professionals-network/2016/may/26/nine-ways-to-use-technology-to-reduce-corruption?CMP=share_btn_wa" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>How to stop corruption: 5 key ingredients</h5>
+                            <br>
+                            <p>There is no silver bullet for fighting corruption. Many countries have made significant progress in curbing corruption, however practitioners are always on the lookout for solutions and evidence of impact. Here are five ways that citizens and governments can make progress in the fight against corruption:</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://www.transparency.org/news/feature/how_to_stop_corruption_5_key_ingredients" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>NATIONAL ANTI-CORRUPTION STRATEGY</h5>
+                            <br>
+                            <p>Summary document</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://cvc.nic.in/NACSSummary.pdf" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>Battling India’s malaise of Corruption</h5>
+                            <br>
+                            <p>Address to the India CEO Forum. Organised by International Market Assessment India Pvt. Ltd.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://cvc.nic.in/CEO.pdf" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>How corruption has negatively affected the development of Malawi</h5>
+                            <br>
+                            <p>Malawi is a small country located in the southeastern part of Africa and it fits Mirzayerv example of economies that are afflicted by high level of corruption. It has a population of 16.36 million (World Bank, 2013). Small as it is, no one would expect many issues from the country. But the truth must be told, Malawi has registered many cases of corruption since its independence from the colonial rulers.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://anticorruption-intl.org/corruption-in-malawi/" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3">
+                    <div class="card ">
+                        <div class="card-content black-text">
+                            <h5>Lack of service delivery the main cause of corruption</h5>
+                            <br>
+                            <p>The extent of the corruption taking place at the deeds office in Pretoria is shocking, according to details that have been revealed in a plea bargain agreement between a former law firm employee and the National Prosecuting Authority.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://www.iol.co.za/business/opinion/business-watch/lack-of-service-delivery-the-main-cause-of-corruption-1554555" target="_black">Read</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--Parallax-->
     <div class="parallax-container">
         <div class="parallax"><img src="img/parallax.jpg"></div>
@@ -267,18 +348,25 @@
     <script src="min/plugin-min.js"></script>
     <script src="min/custom-min.js"></script>
     <script type="text/javascript">
-         var $toastContent = $('<span>Prelims Started. Goodluck!</span>');
-        Materialize.toast($toastContent, 5000);
+    var $toastContent = $('<span>Prelims Started. Goodluck!</span>');
+    Materialize.toast($toastContent, 5000);
     </script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-83611779-1', 'auto');
-  ga('send', 'pageview');
-</script>
+    ga('create', 'UA-83611779-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
