added articles order

--- a/index.html
+++ b/index.html
@@ -224,75 +224,129 @@ body {
         <div class="container">
             <h2 class="header text_b">Articles </h2>
             <div class="row">
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>Nine ways to use technology to reduce corruption</h5>
-                            <br>
-                            <p>How can technology improve how governments track and tackle corruption? Our panel of experts share their thoughts</p>
+                <div class="col s12 m6 l4">
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Nine ways to use technology to reduce corruption</h5>
+                                <br>
+                                <p>How can technology improve how governments track and tackle corruption? Our panel of experts share their thoughts</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="https://www.theguardian.com/global-development-professionals-network/2016/may/26/nine-ways-to-use-technology-to-reduce-corruption?CMP=share_btn_wa" target="_black">Read</a>
+                            </div>
                         </div>
-                        <div class="card-action">
-                            <a href="https://www.theguardian.com/global-development-professionals-network/2016/may/26/nine-ways-to-use-technology-to-reduce-corruption?CMP=share_btn_wa" target="_black">Read</a>
+                    </div>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>How to stop corruption: 5 key ingredients</h5>
+                                <br>
+                                <p>There is no silver bullet for fighting corruption. Many countries have made significant progress in curbing corruption, however practitioners are always on the lookout for solutions and evidence of impact. Here are five ways that citizens and governments can make progress in the fight against corruption:</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://www.transparency.org/news/feature/how_to_stop_corruption_5_key_ingredients" target="_black">Read</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>NATIONAL ANTI-CORRUPTION STRATEGY</h5>
+                                <br>
+                                <p>Summary document</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://cvc.nic.in/NACSSummary.pdf" target="_black">Read</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Six Strategies to Fight Corruption</h5>
+                                <br>
+                                <p>Having looked at some of the ways in which corruption damages the social and institutional fabric of a country, we now turn to reform options open to governments to reduce corruption and mitigate its effects. Rose-Ackerman (1998) recommends a two-pronged strategy aimed at increasing the benefits of being honest and the costs of being corrupt, a sensible combination of reward and punishment as the driving force of reforms. This is a vast subject. We discuss below six complementary approaches. </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://blogs.worldbank.org/futuredevelopment/six-strategies-fight-corruption" target="_black">Read</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>How to stop corruption: 5 key ingredients</h5>
-                            <br>
-                            <p>There is no silver bullet for fighting corruption. Many countries have made significant progress in curbing corruption, however practitioners are always on the lookout for solutions and evidence of impact. Here are five ways that citizens and governments can make progress in the fight against corruption:</p>
+                <div class="col s12 m6 l4">
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>How corruption has negatively affected the development of Malawi</h5>
+                                <br>
+                                <p>Malawi is a small country located in the southeastern part of Africa and it fits Mirzayerv example of economies that are afflicted by high level of corruption. It has a population of 16.36 million (World Bank, 2013). Small as it is, no one would expect many issues from the country. But the truth must be told, Malawi has registered many cases of corruption since its independence from the colonial rulers.</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://anticorruption-intl.org/corruption-in-malawi/" target="_black">Read</a>
+                            </div>
                         </div>
-                        <div class="card-action">
-                            <a href="http://www.transparency.org/news/feature/how_to_stop_corruption_5_key_ingredients" target="_black">Read</a>
+                    </div>
+                    <div class="col s12 ">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Battling India’s malaise of Corruption</h5>
+                                <br>
+                                <p>Address to the India CEO Forum. Organised by International Market Assessment India Pvt. Ltd.</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://cvc.nic.in/CEO.pdf" target="_black">Read</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Lack of service delivery the main cause of corruption</h5>
+                                <br>
+                                <p>The extent of the corruption taking place at the deeds office in Pretoria is shocking, according to details that have been revealed in a plea bargain agreement between a former law firm employee and the National Prosecuting Authority.</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://www.iol.co.za/business/opinion/business-watch/lack-of-service-delivery-the-main-cause-of-corruption-1554555" target="_black">Read</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>NATIONAL ANTI-CORRUPTION STRATEGY</h5>
-                            <br>
-                            <p>Summary document</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="http://cvc.nic.in/NACSSummary.pdf" target="_black">Read</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>Battling India’s malaise of Corruption</h5>
-                            <br>
-                            <p>Address to the India CEO Forum. Organised by International Market Assessment India Pvt. Ltd.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="http://cvc.nic.in/CEO.pdf" target="_black">Read</a>
+                <div class="col s12 m6 l4">
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Six Strategies to Fight Corruption</h5>
+                                <br>
+                                <p>Having looked at some of the ways in which corruption damages the social and institutional fabric of a country, we now turn to reform options open to governments to reduce corruption and mitigate its effects. Rose-Ackerman (1998) recommends a two-pronged strategy aimed at increasing the benefits of being honest and the costs of being corrupt, a sensible combination of reward and punishment as the driving force of reforms. This is a vast subject. We discuss below six complementary approaches. </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://blogs.worldbank.org/futuredevelopment/six-strategies-fight-corruption" target="_black">Read</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>How corruption has negatively affected the development of Malawi</h5>
-                            <br>
-                            <p>Malawi is a small country located in the southeastern part of Africa and it fits Mirzayerv example of economies that are afflicted by high level of corruption. It has a population of 16.36 million (World Bank, 2013). Small as it is, no one would expect many issues from the country. But the truth must be told, Malawi has registered many cases of corruption since its independence from the colonial rulers.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="http://anticorruption-intl.org/corruption-in-malawi/" target="_black">Read</a>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Times view: 10 measures to reduce corruption</h5>
+                                <br>
+                                <p> The Times of India believes that a strong anti-corruption law and a mechanism with the teeth to make it work are crucial if corruption is to be effectively fought. To that extent, a strong Lokpal is a must. However, the Lokpal is not an end in itself, but one of many means to an end, none of them mutually exclusive of the other. Here are 10 other measures that should help reduce corruption </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://timesofindia.indiatimes.com/india/Times-view-10-measures-to-reduce-corruption/articleshow/9656186.cms?gclid=CJKB1f249s4CFdaIaAodFeIE8w&from=mdr" target="_black">Read</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col s12 m3">
-                    <div class="card ">
-                        <div class="card-content black-text">
-                            <h5>Lack of service delivery the main cause of corruption</h5>
-                            <br>
-                            <p>The extent of the corruption taking place at the deeds office in Pretoria is shocking, according to details that have been revealed in a plea bargain agreement between a former law firm employee and the National Prosecuting Authority.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="http://www.iol.co.za/business/opinion/business-watch/lack-of-service-delivery-the-main-cause-of-corruption-1554555" target="_black">Read</a>
+                    <div class="col s12">
+                        <div class="card ">
+                            <div class="card-content black-text">
+                                <h5>Technological innovations to identify and reduce corruption</h5>
+                                <br>
+                                <p>Information and communications technology (ICTs) are increasingly seen by governments as well as activists and civil society as important tools to promote transparency and accountability as well as to identify and reduce corruption. </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="http://www.u4.no/publications/technological-innovations-to-identify-and-reduce-corruption/downloadasset/3122" target="_black">Read</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -350,6 +404,13 @@ body {
     <script type="text/javascript">
     var $toastContent = $('<span>Prelims Started. Goodluck!</span>');
     Materialize.toast($toastContent, 5000);
+    $(function() {
+        var width = 0;
+        $('#overflow .ocontainer div').each(function() {
+            width += $(this).outerWidth(true);
+        });
+        $('#overflow .opcontainer').css('width', width + "px");
+    });
     </script>
     <script>
     (function(i, s, o, g, r, a, m) {
